--- a/team.html
+++ b/team.html
@@ -309,6 +309,31 @@
                         <a class="text-white" href="#"><i class="fab fa-2x fa-instagram"></i></a>
                     </div>
                 </div>
+                <div class="col-lg-3">
+                    <div class="widget">
+                        <h3>Gallery</h3>
+                        <ul class="instafeed instagram-gallery list-unstyled">
+                            <li><a class="instagram-item" href="images/gal_1.jpg" data-fancybox="gal"><img
+                                        src="images/gal_1.jpg" alt="" width="72" height="72"></a>
+                            </li>
+                            <li><a class="instagram-item" href="images/gal_2.jpg" data-fancybox="gal"><img
+                                        src="images/gal_2.jpg" alt="" width="72" height="72"></a>
+                            </li>
+                            <li><a class="instagram-item" href="images/gal_3.jpg" data-fancybox="gal"><img
+                                        src="images/gal_3.jpg" alt="" width="72" height="72"></a>
+                            </li>
+                            <li><a class="instagram-item" href="images/gal_4.jpg" data-fancybox="gal"><img
+                                        src="images/gal_4.jpg" alt="" width="72" height="72"></a>
+                            </li>
+                            <li><a class="instagram-item" href="images/gal_5.jpg" data-fancybox="gal"><img
+                                        src="images/gal_5.jpg" alt="" width="72" height="72"></a>
+                            </li>
+                            <li><a class="instagram-item" href="images/gal_6.jpg" data-fancybox="gal"><img
+                                        src="images/gal_6.jpg" alt="" width="72" height="72"></a>
+                            </li>
+                        </ul>
+                    </div> <!-- /.widget -->
+                </div> <!-- /.col-lg-3 -->
                 <div class="col-md-4 mb-5">
                     <h3 class="text-white mb-4">Scholarships</h3>
                     <div class="d-flex flex-column justify-content-start">
@@ -340,64 +365,18 @@
     </div>
 
     <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
+    <!-- Footer End -->
 
-    <section id="chatbox" class="ai">
-        <input type="checkbox" id="click">
-        <label for="click">
-            <i class="fab fa-facebook-messenger"></i>
-            <i class="fas fa-times"></i>
-        </label>
-        <div class="wrapper">
-            <div class="head-text">
-                ChatBot - Online
-            </div>
-            <div class="chat-box">
-                <div class="desc-text">
-                    Kindly complete the form below to begin chatting with our ai model and our next available agent.
-                </div>
-                <form action="#">
-                    <div class="field">
-                        <input type="text" placeholder="Your Name" required>
-                    </div>
-                    <div class="field">
-                        <input type="email" placeholder="Email Address" required>
-                    </div>
-                    <div class="field textarea">
-                        <textarea cols="30" rows="10" placeholder="Explain your queries.." required></textarea>
-                    </div>
-                    <div class="field">
-                        <button type="submit"><a href="chat.html">Chat</a></button>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </section>
-
-
-    <!-- JavaScript Libraries -->
-    <script src="lib/jquery/jquery.min.js"></script>
-    <script src="lib/jquery/jquery-migrate.min.js"></script>
-    <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="lib/superfish/hoverIntent.js"></script>
-    <script src="lib/superfish/superfish.min.js"></script>
-    <script src="lib/easing/easing.min.js"></script>
-    <script src="lib/modal-video/js/modal-video.js"></script>
-    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-
-    <!-- JavaScript Libraries -->
-    <script src="lib/waypoints/waypoints.min.js"></script>
-    <script src="lib/counterup/counterup.min.js"></script>
-
-    <script src="lib/wow/wow.min.js"></script>
-
-    <!-- Contact Form JavaScript File -->
-    <script src="contactform/contactform.js"></script>
-
-    <!-- Main Javascript File -->
-    <script src="js/main.js"></script>
-
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+    <script src="js/jquery-3.4.1.min.js"></script>
+    <script src="js/popper.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
+    <script src="js/jquery.animateNumber.min.js"></script>
+    <script src="js/jquery.waypoints.min.js"></script>
+    <script src="js/jquery.fancybox.min.js"></script>
+    <script src="js/jquery.sticky.js"></script>
+    <script src="js/aos.js"></script>
+    <script src="js/custom.js"></script>
 
 </body>
 
