--- a/index.html
+++ b/index.html
@@ -765,15 +765,9 @@
             </div>
         </div>
     </div> <!-- /.untree_co-section -->
+
     <!-- Footer Start -->
     <div class="container-fluid position-relative overlay-top bg-dark text-white-50 py-5" style="margin-top: 90px;">
-        <div class="footer__parralax">
-            <div class="footer__parralax-trees"></div>
-            <div class="footer__parralax-moto"></div>
-            <div class="footer__parralax-secondplan"></div>
-            <div class="footer__parralax-premierplan"></div>
-            <div class="footer__parralax-voiture"></div>
-        </div>
         <div class="container mt-5 pt-5">
             <div class="row">
                 <div class="col-md-6 mb-5">
@@ -818,6 +812,31 @@
                         <a class="text-white" href="#"><i class="fab fa-2x fa-instagram"></i></a>
                     </div>
                 </div>
+                <div class="col-lg-3">
+                    <div class="widget">
+                        <h3>Gallery</h3>
+                        <ul class="instafeed instagram-gallery list-unstyled">
+                            <li><a class="instagram-item" href="images/gal_1.jpg" data-fancybox="gal"><img
+                                        src="images/gal_1.jpg" alt="" width="72" height="72"></a>
+                            </li>
+                            <li><a class="instagram-item" href="images/gal_2.jpg" data-fancybox="gal"><img
+                                        src="images/gal_2.jpg" alt="" width="72" height="72"></a>
+                            </li>
+                            <li><a class="instagram-item" href="images/gal_3.jpg" data-fancybox="gal"><img
+                                        src="images/gal_3.jpg" alt="" width="72" height="72"></a>
+                            </li>
+                            <li><a class="instagram-item" href="images/gal_4.jpg" data-fancybox="gal"><img
+                                        src="images/gal_4.jpg" alt="" width="72" height="72"></a>
+                            </li>
+                            <li><a class="instagram-item" href="images/gal_5.jpg" data-fancybox="gal"><img
+                                        src="images/gal_5.jpg" alt="" width="72" height="72"></a>
+                            </li>
+                            <li><a class="instagram-item" href="images/gal_6.jpg" data-fancybox="gal"><img
+                                        src="images/gal_6.jpg" alt="" width="72" height="72"></a>
+                            </li>
+                        </ul>
+                    </div> <!-- /.widget -->
+                </div> <!-- /.col-lg-3 -->
                 <div class="col-md-4 mb-5">
                     <h3 class="text-white mb-4">Scholarships</h3>
                     <div class="d-flex flex-column justify-content-start">
