--- a/blog.html
+++ b/blog.html
@@ -137,135 +137,113 @@
         </div>
     </nav>
 
-    <!-- Training Start -->
-    <div class="container-fluid training py-5">
-        <div class="container py-5">
-            <div class="pb-5">
-                <div class="row g-4 align-items-end">
-                    <div class="col-xl-8">
-                        <h4 class="text-secondary sub-title fw-bold wow fadeInUp" data-wow-delay="0.1s">Dance Training</h4>
-                        <h1 class="display-2 mb-0 wow fadeInUp" data-wow-delay="0.3s">Our Training Platform</h1>
-                    </div>
-                    <div class="col-xl-4 text-xl-end wow fadeInUp" data-wow-delay="0.3s">
-                        <a class="btn btn-primary rounded-pill text-white py-3 px-5" href="#">View All Training</a>
+    <div class="untree_co-section bg-light">
+        <div class="container">
+            <div class="row align-items-stretch">
+                <div class="col-lg-6 mb-4" data-aos="fade-up" data-aos-delay="100">
+                    <div class="media-h d-flex h-100">
+                        <figure>
+                            <img src="images/img-school-4-min.jpg" alt="Image">
+                        </figure>
+                        <div class="media-h-body">
+                            <h2 class="mb-3"><a href="#">Education for Tomorrow's Leaders</a></h2>
+                            <div class="meta "><span class="icon-calendar mr-2"></span><span>June 22, 2020</span> <span
+                                    class="icon-person mr-2"></span>Untree.co</div>
+                            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
+                                there live the blind texts.</p>
+                        </div>
                     </div>
                 </div>
+                <div class="col-lg-6 mb-4" data-aos="fade-up" data-aos-delay="200">
+                    <div class="media-h d-flex h-100">
+                        <figure>
+                            <img src="images/img-school-3-min.jpg" alt="Image">
+                        </figure>
+                        <div class="media-h-body">
+                            <h2 class="mb-3"><a href="#">Enroll Your Kids This Summer to get 30% off</a></h2>
+                            <div class="meta "><span class="icon-calendar mr-2"></span><span>June 22, 2020</span> <span
+                                    class="icon-person mr-2"></span>Untree.co</div>
+                            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
+                                there live the blind texts.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-6 mb-4" data-aos="fade-up" data-aos-delay="100">
+                    <div class="media-h d-flex h-100">
+                        <figure>
+                            <img src="images/img-school-2-min.jpg" alt="Image">
+                        </figure>
+                        <div class="media-h-body">
+                            <h2 class="mb-3"><a href="#">Education for Tomorrow's Leaders</a></h2>
+                            <div class="meta "><span class="icon-calendar mr-2"></span><span>June 22, 2020</span> <span
+                                    class="icon-person mr-2"></span>Untree.co</div>
+                            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
+                                there live the blind texts.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 mb-4" data-aos="fade-up" data-aos-delay="200">
+                    <div class="media-h d-flex h-100">
+                        <figure>
+                            <img src="images/img-school-1-min.jpg" alt="Image">
+                        </figure>
+                        <div class="media-h-body">
+                            <h2 class="mb-3"><a href="#">Enroll Your Kids This Summer to get 30% off</a></h2>
+                            <div class="meta "><span class="icon-calendar mr-2"></span><span>June 22, 2020</span> <span
+                                    class="icon-person mr-2"></span>Untree.co</div>
+                            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
+                                there live the blind texts.</p>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="col-lg-6 mb-4" data-aos="fade-up" data-aos-delay="100">
+                    <div class="media-h d-flex h-100">
+                        <figure>
+                            <img src="images/img-school-5-min.jpg" alt="Image">
+                        </figure>
+                        <div class="media-h-body">
+                            <h2 class="mb-3"><a href="#">Education for Tomorrow's Leaders</a></h2>
+                            <div class="meta "><span class="icon-calendar mr-2"></span><span>June 22, 2020</span> <span
+                                    class="icon-person mr-2"></span>Untree.co</div>
+                            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
+                                there live the blind texts.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 mb-4" data-aos="fade-up" data-aos-delay="200">
+                    <div class="media-h d-flex h-100">
+                        <figure>
+                            <img src="images/img-school-6-min.jpg" alt="Image">
+                        </figure>
+                        <div class="media-h-body">
+                            <h2 class="mb-3"><a href="#">Enroll Your Kids This Summer to get 30% off</a></h2>
+                            <div class="meta "><span class="icon-calendar mr-2"></span><span>June 22, 2020</span> <span
+                                    class="icon-person mr-2"></span>Untree.co</div>
+                            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
+                                there live the blind texts.</p>
+                        </div>
+                    </div>
+                </div>
+
             </div>
-            <div class="training-carousel owl-carousel pt-5 wow fadeInUp" data-wow-delay="0.1s">
-                <div class="training-item bg-white rounded wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="training-img rounded-top">
-                        <img src="img/service-1.jpg" class="img-fluid rounded-top w-100" alt="Image">
-                        <h1 class="fs-1 fw-bold bg-primary text-white d-inline-block rounded p-2 position-absolute" style="top: 0; left: 0;">01</h1>
-                    </div>
-                    <div class="rounded-bottom border border-top-0 p-4">
-                        <a href="#" class="h4 mb-3 d-block">Dance Theater</a>
-                        <p class="mb-3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni vero excepturi blanditiis quidem</p>
-                        <a class="btn btn-primary rounded-pill text-white py-2 px-4" href="#">Read More</a>
-                    </div>
-                </div>
-                <div class="training-item bg-white rounded wow fadeInUp" data-wow-delay="0.3s">
-                    <div class="training-img rounded-top">
-                        <img src="img/service-3.jpg" class="img-fluid rounded-top w-100" alt="Image">
-                        <h1 class="fs-1 fw-bold bg-primary text-white d-inline-block rounded p-2 position-absolute" style="top: 0; left: 0;">02</h1>
-                    </div>
-                    <div class="rounded-bottom border border-top-0 p-4">
-                        <a href="#" class="h4 mb-3 d-block">Personalized Learning</a>
-                        <p class="mb-3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni vero excepturi blanditiis quidem</p>
-                        <a class="btn btn-primary rounded-pill text-white py-2 px-4" href="#">Read More</a>
-                    </div>
-                </div>
-                <div class="training-item bg-white rounded wow fadeInUp" data-wow-delay="0.5s">
-                    <div class="training-img rounded-top">
-                        <img src="img/service-2.jpg" class="img-fluid rounded-top w-100" alt="Image">
-                        <h1 class="fs-1 fw-bold bg-primary text-white d-inline-block rounded p-2 position-absolute" style="top: 0; left: 0;">03</h1>
-                    </div>
-                    <div class="rounded-bottom border border-top-0 p-4">
-                        <a href="#" class="h4 mb-3 d-block">Convenient Dancing</a>
-                        <p class="mb-3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni vero excepturi blanditiis quidem</p>
-                        <a class="btn btn-primary rounded-pill text-white py-2 px-4" href="#">Read More</a>
-                    </div>
-                </div>
-                <div class="training-item bg-white rounded wow fadeInUp" data-wow-delay="0.7s">
-                    <div class="training-img rounded-top">
-                        <img src="img/service-4.jpg" class="img-fluid rounded-top w-100" alt="Image">
-                        <h1 class="fs-1 fw-bold bg-primary text-white d-inline-block rounded p-2 position-absolute" style="top: 0; left: 0;">04</h1>
-                    </div>
-                    <div class="rounded-bottom border border-top-0 p-4">
-                        <a href="#" class="h4 mb-3 d-block">Dance Theater</a>
-                        <p class="mb-3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni vero excepturi blanditiis quidem</p>
-                        <a class="btn btn-primary rounded-pill text-white py-2 px-4" href="#">Read More</a>
-                    </div>
-                </div>
-                <div class="training-item bg-white rounded wow fadeInUp" data-wow-delay="0.9s">
-                    <div class="training-img rounded-top">
-                        <img src="img/service-3.jpg" class="img-fluid rounded-top w-100" alt="Image">
-                        <h1 class="fs-1 fw-bold bg-primary text-white d-inline-block rounded p-2 position-absolute" style="top: 0; left: 0;">05</h1>
-                    </div>
-                    <div class="rounded-bottom border border-top-0 p-4">
-                        <a href="#" class="h4 mb-3 d-block">Personalized Learning</a>
-                        <p class="mb-3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni vero excepturi blanditiis quidem</p>
-                        <a class="btn btn-primary rounded-pill text-white py-2 px-4" href="#">Read More</a>
-                    </div>
+
+            <div class="row mt-5">
+                <div class="col-12 text-center">
+                    <ul class="list-unstyled custom-pagination">
+                        <li><a href="#">1</a></li>
+                        <li class="active"><a href="#">2</a></li>
+                        <li><a href="#">3</a></li>
+                        <li><a href="#">4</a></li>
+                    </ul>
                 </div>
             </div>
         </div>
-    </div>
-    <!-- Training End -->
-
-<<<<<<< HEAD
-    <div class="parallax section dbcolor">
-        <div class="container">
-            <div class="row logos">
-                <div class="col-md-2 col-sm-2 col-xs-6 wow fadeInUp">
-                    <a href="#"><img src="images/logo_01.png" alt="" class="img-repsonsive"></a>
-                </div>
-                <div class="col-md-2 col-sm-2 col-xs-6 wow fadeInUp">
-                    <a href="#"><img src="images/logo_02.png" alt="" class="img-repsonsive"></a>
-                </div>
-                <div class="col-md-2 col-sm-2 col-xs-6 wow fadeInUp">
-                    <a href="#"><img src="images/logo_03.png" alt="" class="img-repsonsive"></a>
-                </div>
-                <div class="col-md-2 col-sm-2 col-xs-6 wow fadeInUp">
-                    <a href="#"><img src="images/logo_04.png" alt="" class="img-repsonsive"></a>
-                </div>
-                <div class="col-md-2 col-sm-2 col-xs-6 wow fadeInUp">
-                    <a href="#"><img src="images/logo_05.png" alt="" class="img-repsonsive"></a>
-                </div>
-                <div class="col-md-2 col-sm-2 col-xs-6 wow fadeInUp">
-                    <a href="#"><img src="images/logo_06.png" alt="" class="img-repsonsive"></a>
-                </div>
-            </div><!-- end row -->
-        </div><!-- end container -->
-    </div><!-- end section -->
+    </div> <!-- /.untree_co-section -->
 
     <!-- Footer -->
-=======
-    <div class="parallax section dbcolor">
-        <div class="container">
-            <div class="row logos">
-                <div class="col-md-2 col-sm-2 col-xs-6 wow fadeInUp">
-                    <a href="#"><img src="images/logo_01.png" alt="" class="img-repsonsive"></a>
-                </div>
-                <div class="col-md-2 col-sm-2 col-xs-6 wow fadeInUp">
-                    <a href="#"><img src="images/logo_02.png" alt="" class="img-repsonsive"></a>
-                </div>
-                <div class="col-md-2 col-sm-2 col-xs-6 wow fadeInUp">
-                    <a href="#"><img src="images/logo_03.png" alt="" class="img-repsonsive"></a>
-                </div>
-                <div class="col-md-2 col-sm-2 col-xs-6 wow fadeInUp">
-                    <a href="#"><img src="images/logo_04.png" alt="" class="img-repsonsive"></a>
-                </div>
-                <div class="col-md-2 col-sm-2 col-xs-6 wow fadeInUp">
-                    <a href="#"><img src="images/logo_05.png" alt="" class="img-repsonsive"></a>
-                </div>
-                <div class="col-md-2 col-sm-2 col-xs-6 wow fadeInUp">
-                    <a href="#"><img src="images/logo_06.png" alt="" class="img-repsonsive"></a>
-                </div>
-            </div><!-- end row -->
-        </div><!-- end container -->
-    </div><!-- end section -->
-
->>>>>>> 1fe87f70abc34b8e9b87ac847edf256addd2e8b3
     <!-- Footer Start -->
     <div class="container-fluid position-relative overlay-top bg-dark text-white-50 py-5" style="margin-top: 90px;">
         <div class="container mt-5 pt-5">
