--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
 
                             </ul>
                         </li>
-                        <li><a href="staff.html">Our Staff</a></li>
-                        <li><a href="news.html">News</a></li>
+                        <li><a href="team.html">Our Staff</a></li>
+                        <li><a href="blog.html">Blog</a></li>
                         <li><a href="gallery.html">Gallery</a></li>
                         <li><a href="about.html">About</a></li>
                         <li><a href="contact.html">Contact</a></li>
