--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
                     <ul class="js-clone-nav d-none d-lg-inline-block site-menu">
                         <li class="active"><a href="index.html">Home</a></li>
-                        <li><a href="courses.html">Scholarships</a></li>
+                        <li><a href="course.html">Scholarships</a></li>
                         <li class="has-children">
                             <a href="#">Universities</a>
                             <ul class="dropdown">
