--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
                     <ul class="js-clone-nav d-none d-lg-inline-block site-menu">
                         <li class="active"><a href="index.html">Home</a></li>
                         <li><a href="course.html">Scholarships</a></li>
+                        <li><a href="service.html">Services</a></li>
                         <li class="has-children">
                             <a href="#">Universities</a>
                             <ul class="dropdown">
