--- a/course.html
+++ b/course.html
@@ -169,8 +169,6 @@
     </div>
     <!-- Header End -->
 
-
-    <!-- end img section -->
     <!-- Courses Start -->
     <div class="container-fluid px-0 py-5">
         <div class="row mx-0 justify-content-center pt-5">
@@ -304,7 +302,8 @@
                                 </div>
                             </div>
                             <div class="col-sm-6">
-                                <button class="btn btn-primary btn-block" type="submit" style="height: 60px;">Sign Up Now</button>
+                                <button class="btn btn-primary btn-block" type="submit" style="height: 60px;">Sign Up
+                                    Now</button>
                             </div>
                         </div>
                     </form>
@@ -314,35 +313,141 @@
     </div>
     <!-- Courses End -->
 
-    <div class="parallax section dbcolor">
-        <div class="container">
-            <div class="row logos">
-                <div class="col-md-2 col-sm-2 col-xs-6 wow fadeInUp">
-                    <a href="#"><img src="images/logo_01.png" alt="" class="img-repsonsive"></a>
+    <!-- Courses Start -->
+    <div class="container-fluid py-5">
+        <div class="container py-5">
+            <div class="row mx-0 justify-content-center">
+                <div class="col-lg-8">
+                    <div class="section-title text-center position-relative mb-5">
+                        <h6 class="d-inline-block position-relative text-secondary text-uppercase pb-2">Our Courses</h6>
+                        <h1 class="display-4">Checkout New Releases Of Our Courses</h1>
+                    </div>
                 </div>
-                <div class="col-md-2 col-sm-2 col-xs-6 wow fadeInUp">
-                    <a href="#"><img src="images/logo_02.png" alt="" class="img-repsonsive"></a>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-md-6 pb-4">
+                    <a class="courses-list-item position-relative d-block overflow-hidden mb-2" href="detail.html">
+                        <img class="img-fluid" src="img/courses-1.jpg" alt="">
+                        <div class="courses-text">
+                            <h4 class="text-center text-white px-3">Web design & development courses for
+                                beginners</h4>
+                            <div class="border-top w-100 mt-3">
+                                <div class="d-flex justify-content-between p-4">
+                                    <span class="text-white"><i class="fa fa-user mr-2"></i>Jhon Doe</span>
+                                    <span class="text-white"><i class="fa fa-star mr-2"></i>4.5
+                                        <small>(250)</small></span>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
                 </div>
-                <div class="col-md-2 col-sm-2 col-xs-6 wow fadeInUp">
-                    <a href="#"><img src="images/logo_03.png" alt="" class="img-repsonsive"></a>
+                <div class="col-lg-4 col-md-6 pb-4">
+                    <a class="courses-list-item position-relative d-block overflow-hidden mb-2" href="detail.html">
+                        <img class="img-fluid" src="img/courses-2.jpg" alt="">
+                        <div class="courses-text">
+                            <h4 class="text-center text-white px-3">Web design & development courses for
+                                beginners</h4>
+                            <div class="border-top w-100 mt-3">
+                                <div class="d-flex justify-content-between p-4">
+                                    <span class="text-white"><i class="fa fa-user mr-2"></i>Jhon Doe</span>
+                                    <span class="text-white"><i class="fa fa-star mr-2"></i>4.5
+                                        <small>(250)</small></span>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
                 </div>
-                <div class="col-md-2 col-sm-2 col-xs-6 wow fadeInUp">
-                    <a href="#"><img src="images/logo_04.png" alt="" class="img-repsonsive"></a>
+                <div class="col-lg-4 col-md-6 pb-4">
+                    <a class="courses-list-item position-relative d-block overflow-hidden mb-2" href="detail.html">
+                        <img class="img-fluid" src="img/courses-3.jpg" alt="">
+                        <div class="courses-text">
+                            <h4 class="text-center text-white px-3">Web design & development courses for
+                                beginners</h4>
+                            <div class="border-top w-100 mt-3">
+                                <div class="d-flex justify-content-between p-4">
+                                    <span class="text-white"><i class="fa fa-user mr-2"></i>Jhon Doe</span>
+                                    <span class="text-white"><i class="fa fa-star mr-2"></i>4.5
+                                        <small>(250)</small></span>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
                 </div>
-                <div class="col-md-2 col-sm-2 col-xs-6 wow fadeInUp">
-                    <a href="#"><img src="images/logo_05.png" alt="" class="img-repsonsive"></a>
+                <div class="col-lg-4 col-md-6 pb-4">
+                    <a class="courses-list-item position-relative d-block overflow-hidden mb-2" href="detail.html">
+                        <img class="img-fluid" src="img/courses-4.jpg" alt="">
+                        <div class="courses-text">
+                            <h4 class="text-center text-white px-3">Web design & development courses for
+                                beginners</h4>
+                            <div class="border-top w-100 mt-3">
+                                <div class="d-flex justify-content-between p-4">
+                                    <span class="text-white"><i class="fa fa-user mr-2"></i>Jhon Doe</span>
+                                    <span class="text-white"><i class="fa fa-star mr-2"></i>4.5
+                                        <small>(250)</small></span>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
                 </div>
-                <div class="col-md-2 col-sm-2 col-xs-6 wow fadeInUp">
-                    <a href="#"><img src="images/logo_06.png" alt="" class="img-repsonsive"></a>
+                <div class="col-lg-4 col-md-6 pb-4">
+                    <a class="courses-list-item position-relative d-block overflow-hidden mb-2" href="detail.html">
+                        <img class="img-fluid" src="img/courses-5.jpg" alt="">
+                        <div class="courses-text">
+                            <h4 class="text-center text-white px-3">Web design & development courses for
+                                beginners</h4>
+                            <div class="border-top w-100 mt-3">
+                                <div class="d-flex justify-content-between p-4">
+                                    <span class="text-white"><i class="fa fa-user mr-2"></i>Jhon Doe</span>
+                                    <span class="text-white"><i class="fa fa-star mr-2"></i>4.5
+                                        <small>(250)</small></span>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
                 </div>
-            </div><!-- end row -->
-        </div><!-- end container -->
-    </div><!-- end section -->
+                <div class="col-lg-4 col-md-6 pb-4">
+                    <a class="courses-list-item position-relative d-block overflow-hidden mb-2" href="detail.html">
+                        <img class="img-fluid" src="img/courses-6.jpg" alt="">
+                        <div class="courses-text">
+                            <h4 class="text-center text-white px-3">Web design & development courses for
+                                beginners</h4>
+                            <div class="border-top w-100 mt-3">
+                                <div class="d-flex justify-content-between p-4">
+                                    <span class="text-white"><i class="fa fa-user mr-2"></i>Jhon Doe</span>
+                                    <span class="text-white"><i class="fa fa-star mr-2"></i>4.5
+                                        <small>(250)</small></span>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-12">
+                    <nav aria-label="Page navigation">
+                        <ul class="pagination pagination-lg justify-content-center mb-0">
+                            <li class="page-item disabled">
+                                <a class="page-link rounded-0" href="#" aria-label="Previous">
+                                    <span aria-hidden="true">&laquo;</span>
+                                    <span class="sr-only">Previous</span>
+                                </a>
+                            </li>
+                            <li class="page-item active"><a class="page-link" href="#">1</a></li>
+                            <li class="page-item"><a class="page-link" href="#">2</a></li>
+                            <li class="page-item"><a class="page-link" href="#">3</a></li>
+                            <li class="page-item">
+                                <a class="page-link rounded-0" href="#" aria-label="Next">
+                                    <span aria-hidden="true">&raquo;</span>
+                                    <span class="sr-only">Next</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Courses End -->
 
-<<<<<<< HEAD
     <!-- Footer -->
-=======
->>>>>>> 1fe87f70abc34b8e9b87ac847edf256addd2e8b3
     <!-- Footer Start -->
     <div class="container-fluid position-relative overlay-top bg-dark text-white-50 py-5" style="margin-top: 90px;">
         <div class="container mt-5 pt-5">
